<resources>
    <string name="main_name">Cafe Register</string>
    <string name="activity_donut_name">Order Donuts</string>
    <string name="activity_coffee_name">Order Coffee</string>
    <string name="activity_order_name">Your Order</string>
    <string name="activity_store_orders_name">Store Orders</string>
    <string name="coffee_addition_1">Cream</string>
    <string name="coffee_addition_2">Syrup</string>
    <string name="coffee_addition_3">Milk</string>
    <string name="coffee_addition_4">Caramel</string>
    <string name="coffee_addition_5">Whipped Cream</string>
    <string name="coffee_subtotal_hint">subtotal</string>
    <string name="coffee_button_text">ADD COFFEE</string>
    <string name="coffee_toast">Coffee added to your order.</string>
    <string name="donut_button_text">ADD DONUT</string>
    <string name="donut_toast">Donut added to order.</string>
    <string name="activity_donut_order_name">Add Donut to Order</string>
    <string name="export_orders">EXPORT ORDERS</string>
    <string name="total_text">Total:</string>
    <string name="cancel_order">CANCEL ORDER</string>
    <string name="sales_tax">Sales tax:</string>
    <string name="sub_total">Sub-total:</string>
    <string name="place_order">PLACE ORDER</string>
    <string name="remove_selected_item">REMOVE SELECTED ITEM</string>
    <string name="delete_item_message">Are you sure you want to delete the item:\u0020</string>
    <string name="delete_item_text">Delete from Order</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="deleted_message">Item deleted.</string>
    <string name="deleted_not_message">Item not deleted.</string>
    <string name="delete_item_prompt">Tap on an item to delete.</string>
    <string name="no_items_prompt">There are currently no items in this order.</string>
    <string name="place_order_alert_text">Place Order</string>
    <string name="place_order_alert_message">Are you sure you want to place this order?</string>
    <string name="order_placed">The order has been placed.</string>
    <string name="order_not_placed">The order was not placed.</string>
    <string name="order_is_empty">The order is empty.</string>
    <string name="no_orders_prompt">There are no placed orders to display.</string>
    <string name="order_cancelled">The order has been cancelled.</string>
    <string name="order_not_cancelled">The order was not cancelled.</string>
    <string name="no_orders">There are no orders to cancel.</string>
    <string name="cancel_order_alert_text">Cancel Order</string>
    <string name="cancel_order_alert_message">Are you sure you want to cancel this order?</string>
</resources>